# derive_more

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  aliases.js  appveyor.yml  build.rs  clippy.toml  crates.js  rustfmt.toml  search-index.js  settings.html  setup-gh-pages.sh  source-files.js  update-gh-pages.sh  watch.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
ci/: script.sh  test_all_features.sh
convert_case/: all.html  enum.Case.html  index.html  struct.FromCasing.html  trait.Casing.html
derive_more/: add.html  add_assign.html  all.html  as_mut.html  as_ref.html  constructor.html  deref.html  deref_mut.html  display.html  error.html  from.html  from_str.html  index.html  index_mut.html  index_op.html  into.html  into_iterator.html  is_variant.html  mul.html  mul_assign.html  not.html  sum.html  try_into.html  unwrap.html
doc/: add.md  add_assign.md  as_mut.md  as_ref.md  borrow.md  borrow_mut.md  constructor.md  deref.md  deref_mut.md  display.md  error.md  from.md  from_str.md  index.md  index_mut.md  index_op.md  into.md  into_iterator.md  is_variant.md  iterator.md  mul.md  mul_assign.md  not.md  sum.md  try_into.md  unwrap.md
examples/: deny_missing_docs.rs
impl/: Cargo.toml  README.md  build.rs
impl/doc/: add.md  add_assign.md  as_mut.md  as_ref.md  as_variant.md  clone.md  constructor.md  copy.md  debug.md  default_derive.md  deref_mut.md  display.md  eq.md  error.md  from.md  from_str.md  hash.md  into.md  is_variant.md  mul.md  mul_assign.md  not.md  sum.md  try_from.md  try_into.md  try_into_variant.md  try_unwrap.md  unwrap.md
impl/src/: add_assign_like.rs  add_helpers.rs  add_like.rs  as_mut.rs  as_ref.rs  as_variant.rs  clone.rs  constructor.rs  copy.rs  default.rs  deref.rs  deref_mut.rs  display.rs  error.rs  from.rs  from_str.rs  hash.rs  index.rs  index_mut.rs  into.rs  into_iterator.rs  is_variant.rs  lib.rs  mul_assign_like.rs  mul_like.rs  not_like.rs  parsing.rs  partial_eq.rs  ref_conv.rs  sum_like.rs  try_from.rs  try_into.rs  try_into_variant.rs  try_unwrap.rs  unwrap.rs  utils.rs
impl/src/as/: mod.rs  mut.rs  ref.rs
impl/src/cmp/: eq.rs  mod.rs  partial_eq.rs
impl/src/fmt/: debug.rs  display.rs  mod.rs  parsing.rs
impl/src/ops/: add.rs  add_assign.rs  mod.rs  mul.rs  mul_assign.rs
proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenNode.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.Term.html  struct.TokenStream.html  struct.TokenTree.html
proc_macro2/token_stream/: index.html  struct.IntoIter.html
quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  struct.ByteStr.html  struct.Hex.html  struct.Ident.html  struct.Tokens.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
src/: add.rs  add_assign_like.rs  add_like.rs  add_like_old.rs  as.rs  as_mut.rs  as_ref.rs  aserror.rs  borrow.rs  borrow_mut.rs  constructor.rs  convert.rs  default.rs  deref.rs  deref_mut.rs  deref_mut_to_inner.rs  deref_to_inner.rs  display.rs  error.rs  errors.rs  fmt.rs  from.rs  from_new.rs  from_str.rs  index.rs  index_mut.rs  into.rs  into_iterator.rs  is_variant.rs  iterator.rs  lib.rs  mul_assign_like.rs  mul_helpers.rs  mul_like.rs  mul_like_old.rs  mul_like_quote.rs  mul_like_traitdef.rs  not_like.rs  ops.rs  parsing.rs  (+9 more)
src/convert_case/: case.rs.html  lib.rs.html  words.rs.html
src/derive_more/: add_assign_like.rs.html  add_helpers.rs.html  add_like.rs.html  as_mut.rs.html  as_ref.rs.html  constructor.rs.html  deref.rs.html  deref_mut.rs.html  display.rs.html  error.rs.html  from.rs.html  from_str.rs.html  index.rs.html  index_mut.rs.html  into.rs.html  into_iterator.rs.html  is_variant.rs.html  lib.rs.html  mul_assign_like.rs.html  mul_helpers.rs.html  mul_like.rs.html  not_like.rs.html  parsing.rs.html  sum_like.rs.html  try_into.rs.html  unwrap.rs.html  utils.rs.html
src/errors/: mod.rs  ops.rs  try_into.rs
src/proc_macro2/: detection.rs.html  fallback.rs.html  lib.rs.html  macros.rs.html  marker.rs.html  parse.rs.html  stable.rs.html  strnom.rs.html  wrapper.rs.html
src/quote/: ext.rs.html  format.rs.html  ident.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html  tokens.rs.html
src/syn/: attr.rs.html  await.rs.html  bigint.rs.html  buffer.rs.html  constant.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  (+35 more)
syn/: all.html  enum.Abi.html  enum.AttrStyle.html  enum.BareFnArgName.html  enum.BinOp.html  enum.BinOpToken.html  enum.Body.html  enum.ConstExpr.html  enum.Data.html  enum.DelimToken.html  enum.Expr.html  enum.Fields.html  enum.FloatSuffix.html  enum.FloatTy.html  enum.FunctionRetTy.html  enum.GenericArgument.html  enum.GenericParam.html  enum.IntSuffix.html  enum.IntTy.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.MetaItem.html  enum.Mutability.html  enum.NestedMeta.html  enum.NestedMetaItem.html  enum.PathArguments.html  enum.PathParameters.html  enum.ReturnType.html  enum.StrStyle.html  enum.Token.html  enum.TokenTree.html  enum.TraitBoundModifier.html  enum.Ty.html  enum.TyParamBound.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Unsafety.html  (+155 more)
tests/: add.rs  add_assign.rs  as_mut.rs  as_ref.rs  as_variant.rs  boats_display_derive.rs  borrow.rs  borrow_mut.rs  clone.rs  constructor.rs  copy.rs  debug.rs  default.rs  deref.rs  deref_mut.rs  deref_mut_to_inner.rs  deref_to_inner.rs  display.rs  eq.rs  error.rs  error_tests.rs  from.rs  from_str.rs  from_types.rs  generics.rs  hash.rs  hash_and_eq.rs  hash_utils.rs  index.rs  index_mut.rs  into.rs  into_iterator.rs  into_types.rs  is_variant.rs  iterator.rs  lib.rs  mul.rs  mul_assign.rs  no_std.rs  not.rs  (+8 more)
tests_suite/: Cargo.toml
unicode_xid/: all.html  constant.UNICODE_VERSION.html  index.html  trait.UnicodeXID.html
(+417 files in other folders)
