[package]
name = "derive_more"
version = "0.15.1-pre"
description = "Adds #[derive(x)] macros for more traits"
authors = ["Jelte Fennema <github-tech@jeltef.nl>"]
license = "MIT"
repository = "https://github.com/JelteF/derive_more"
documentation = "https://jeltef.github.io/derive_more/derive_more/"

readme = "README.md"
keywords = ["derive", "Add", "From", "Constructor", "implementation"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
autotests = true

[lib]
name = "derive_more"
proc-macro = true

[dependencies]
lazy_static = {version = "1.3", optional = true}
proc-macro2 = "0.4"
quote = "0.6"
regex = "1"
syn = { version = "0.15", features = ["extra-traits"] }

[build-dependencies]
rustc_version = "0.2"

[badges]
travis-ci = { repository = "JelteF/derive_more" }
appveyor = { repository = "JelteF/derive_more" }

[features]
nightly = []
no_std = []

add_assign_like = []
add_like = []
constructor = []
deref = []
deref_mut = []
display = ["lazy_static"]
from = []
from_str = []
index = []
index_mut = []
into = []
mul_assign_like = []
mul_like = []
not_like = []
try_into = []

default = [
    "add_assign_like",
    "add_like",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "mul_assign_like",
    "mul_like",
    "not_like",
    "try_into",
]

[[test]]
name = "no_std"
path = "tests/no_std.rs"
required-features = ["no_std"]
