[package]
name = "derive_more"
version = "0.15.1-pre"
description = "Adds #[derive(x)] macros for more traits"
authors = ["Jelte Fennema <github-tech@jeltef.nl>"]
license = "MIT"
repository = "https://github.com/JelteF/derive_more"
documentation = "https://jeltef.github.io/derive_more/derive_more/"
edition = "2018"

readme = "README.md"
keywords = ["derive", "Add", "From", "Constructor", "implementation"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
autotests = true

[lib]
name = "derive_more"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }

[build-dependencies]
rustc_version = "0.2"
peg = { version = "0.5", optional = true }

[badges]
travis-ci = { repository = "JelteF/derive_more" }
appveyor = { repository = "JelteF/derive_more" }

[features]
nightly = []
add_assign_like = []
add_like = []
constructor = []
deref = []
deref_mut = []
deref_to_inner = []
deref_mut_to_inner = []
display = []
from = []
from_str = []
index = []
index_mut = []
into = []
into_iterator = []
iterator = []
mul_assign_like = []
mul_like = []
not_like = []
sum_like = []
try_into = []
generate-parsing-rs = ["peg"]

default = [
    "add_assign_like",
    "add_like",
    "constructor",
    "deref",
    "deref_mut",
    "deref_to_inner",
    "deref_mut_to_inner",
    "display",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "iterator",
    "mul_assign_like",
    "mul_like",
    "not_like",
    "sum_like",
    "try_into",
]

[[test]]
name = "add_assign"
path = "tests/add_assign.rs"
required-features = ["add_assign_like"]

[[test]]
name = "add"
path = "tests/add.rs"
required-features = ["add_like"]

[[test]]
name = "boats_display_derive"
path = "tests/boats_display_derive.rs"
required-features = ["display"]

[[test]]
name = "constructor"
path = "tests/constructor.rs"
required-features = ["constructor"]

[[test]]
name = "deref"
path = "tests/deref.rs"
required-features = ["deref"]

[[test]]
name = "deref_mut"
path = "tests/deref_mut.rs"
required-features = ["deref_mut"]

[[test]]
name = "deref_to_inner"
path = "tests/deref_to_inner.rs"
required-features = ["deref_to_inner"]

[[test]]
name = "deref_mut_to_inner"
path = "tests/deref_mut_to_inner.rs"
required-features = ["deref_mut_to_inner"]

[[test]]
name = "display"
path = "tests/display.rs"
required-features = ["display"]

[[test]]
name = "from"
path = "tests/from.rs"
required-features = ["from"]

[[test]]
name = "from_str"
path = "tests/from_str.rs"
required-features = ["from_str"]

[[test]]
name = "index_mut"
path = "tests/index_mut.rs"
required-features = ["index_mut"]

[[test]]
name = "index"
path = "tests/index.rs"
required-features = ["index"]

[[test]]
name = "into"
path = "tests/into.rs"
required-features = ["into"]

[[test]]
name = "into_iterator"
path = "tests/into_iterator.rs"
required-features = ["into_iterator"]

[[test]]
name = "mul_assign"
path = "tests/mul_assign.rs"
required-features = ["mul_assign_like"]

[[test]]
name = "mul"
path = "tests/mul.rs"
required-features = ["mul_like"]

[[test]]
name = "not"
path = "tests/not.rs"
required-features = ["not_like"]

[[test]]
name = "sum"
path = "tests/sum.rs"
required-features = ["sum_like"]

[[test]]
name = "try_into"
path = "tests/try_into.rs"
required-features = ["try_into"]

[[test]]
name = "no_std"
path = "tests/no_std.rs"
required-features = [
    "add_assign_like",
    "add_like",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "mul_assign_like",
    "mul_like",
    "not_like",
    "sum_like",
    "try_into",
]

[[test]]
name = "generics"
path = "tests/generics.rs"
required-features = [
    "add_assign_like",
    "add_like",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "mul_assign_like",
    "mul_like",
    "not_like",
    "try_into",
]

[[test]]
name = "lib"
path = "tests/lib.rs"
required-features = [
    "add_assign_like",
    "add_like",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "mul_assign_like",
    "mul_like",
    "not_like",
    "try_into",
]

[[example]]
name = "deny_missing_docs"
path = "examples/deny_missing_docs.rs"
required-features = [
    "add_assign_like",
    "add_like",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "mul_assign_like",
    "mul_like",
    "not_like",
    "try_into",
]
